Create button and style it

--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
     <div id="main">
       <div id="container">
         <h1 class="flex">ClickFast ⏩</h1>
-        <p class="catchphrase">Sois le plus rapide des clickers du game ⚡</p>
+        <p class="catchphrase">
+          Sois le plus rapide des clickers du game ⚡
+        </p>
+
+        <div class="flex">
+          <button id="button-clicker">Click !!!</button>
+        </div>
       </div>
     </div>
   </body>
