--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta
@@ -7,28 +7,14 @@
       content="width=device-width, initial-scale=1.0"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>ClickFast ⏩</title>
+    <title>ClickFast</title>
   </head>
   <body>
     <div id="main">
       <div id="container">
-        <h1 class="flex-center">ClickFast ⏩</h1>
-        <p class="catchphrase">
-          Sois le plus rapide des clickers du game ⚡
-        </p>
-
-        <div class="flex-center">
-          <div class="number">
-            <p id="counter">0</p>
-          </div>
-        </div>
-
-        <div class="flex-center">
-          <button id="button-clicker">Click !!!</button>
-        </div>
+        <h1 class="flex">ClickFast</h1>
+        <p class="catchphrase">Sois le plus rapide des clickers du game ⚡</p>
       </div>
     </div>
-
-    <script src="script.js"></script>
   </body>
 </html>
