maj html/css/scr/sum

--- a/index.html
+++ b/index.html
@@ -12,9 +12,15 @@
   <body>
     <div id="main">
       <div id="container">
-        <h1 class="flex">ClickFast</h1>
+        <h1 class="flex">Click♛Fast</h1>
         <p class="catchphrase">Sois le plus rapide des clickers du game ⚡</p>
+        
+        <div class="flex-center">
+          <button onclick="countClicks()" id="button-clicker">CLICK</button>
+        </div>
+        <p id="output" class="number"></p>
       </div>
     </div>
+    <script src="script.js"></script>
   </body>
-</html>
+</html>     
